@@ -1,3 +1,4 @@
+- Don't close the upload dialog when the config parameter "upload_quickselect" is set to false.
 - Email: Composer -> The "from" combobox doesn't need to be editable.
 - Tickets: Added "ticket group" to display panel
 - Address book: user permissions check for custom fields in Advanced Search
